--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section>
 Junwei Zhang holds the position of Assistant Researcher at the Center for Artificial Intelligence and Intelligent Medicine, Hangzhou Institute of Medicine, Chinese Academy of Sciences. 
 He earned his Ph.D. from the College of Intelligence and Computing at Tianjin University, China. 
-He is a professional member of China Computer Federation (CCF) and Chinese Association for Artificial Intelligence (CAAI), and recognized as a high-level talent in Hangzhou City. 
+He is a professional member of China Computer Federation (CCF) and Chinese Association for Artificial Intelligence (CAAI), and recognized as a high-level talent in Hangzhou. 
 His current research pursuits encompass Quantum Cognition, Quantum Machine Learning, Natural Language Processing, Large Language Models, and Al for Life Sciences. 
 Throughout his career, Junwei has published more than ten academic papers as the first author at esteemed artificial intelligence conferences such as AAAI, ECAI, and CIKM. 
 He has secured multiple invention patents, applied for several software copyrights, and served as a reviewer for reputable journals and conferences including Information Sciences, AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
