--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
 	
 	<!-- Published as participating author -->
-	<p>Published as Participating Author:</p>
+	<p>Published as General Author:</p>
 	<div data-level="CCF-A">Di Jin, Jun Yang, Xiaobao Wang, <b>Junwei Zhang</b>, Shuqi Li, Dongxiao He. A Dynamic Knowledge Update-Driven Model with Large Language Models for Fake News Detection. In IJCAI, 2025.</div>
 	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
 	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, <b>Junwei Zhang</b>, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
